<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context=".fragments.Eventos_Fragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/toolbar_cornerradius"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/all"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:text="@string/events"
                android:textAlignment="center"
                android:textColor="@color/TextblueColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imgBack"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/txtFindEvent"
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_help"
        android:drawableEnd="@drawable/ic_help"
        android:focusableInTouchMode="true"
        android:hint="@string/FindEvent"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="textStart"
        android:textColor="#3C3C4399"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/txtFindEvent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/MainEvents"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtFindEvent"
                app:layout_constraintVertical_bias="0.06"
                tools:ignore="MissingConstraints">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtMainEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/MainEvent"
                        android:textColor="@color/TextblueColor"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imgChurch"
                            android:layout_width="match_parent"
                            android:layout_height="168dp"
                            android:layout_marginStart="13dp"
                            android:layout_marginTop="9dp"
                            android:layout_marginEnd="19dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/guadalupe_misa"
                            app:shapeAppearance="@style/roudImageView">

                        </com.google.android.material.imageview.ShapeableImageView>

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="72dp"
                            android:layout_height="24dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="false"
                            android:layout_marginStart="280sp"
                            android:layout_marginTop="25sp"
                            android:layout_marginEnd="30dp"
                            android:layout_marginBottom="80dp"
                            android:background="@drawable/custom_buttonlive">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="72dp"
                                android:layout_height="24dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="6dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="8dp"
                                    android:src="@drawable/ic_baseline_red"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="0.0"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/textView"
                                    android:layout_width="48sp"
                                    android:layout_height="13sp"
                                    android:layout_marginStart="18dp"
                                    android:layout_marginTop="4dp"
                                    android:layout_marginEnd="6dp"
                                    android:layout_marginBottom="7dp"
                                    android:text="EN VIVO"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="12dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </RelativeLayout>


                    <TextView
                        android:id="@+id/txtBasilicGpe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:layout_marginTop="9dp"
                        android:text="@string/BasilicaGpe"
                        android:textColor="@color/TextblackColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/DominicalMisa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:text="@string/MisaDominical"
                        android:textColor="@color/TextblackColor"
                        android:textSize="15sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="10dp"
                android:text="Eventos en tu ciudad"
                android:textColor="@color/TextblueColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/recyclermodel" />


        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="13dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:layout_width="235dp"
            android:layout_height="45dp"
            android:background="@drawable/custom_button"
            android:drawableLeft="@drawable/heart"
            android:gravity="bottom"
            android:text="Apoyar a mi iglesia"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@+id/rcv" />

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_menu"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>